# design-of-tessellation-tiles

./: .gitignore  pyproject.toml  readme.md  run_model_interface.sh  run_web_interface.sh
conf/: task_conf.json
src/: assist.py  endpoint_action.py  interface.py  model_interface.py
